# ai_joke_bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
app/: __main__.py  bot.py  config.py  entrypoint.py
app/db/: engine.py  mappers.py
app/db/models/: joke.py  joke_suggestions.py
app/domains/: joke.py  joke_suggestion.py
app/handlers/: add_joke.py  all_messages.py  common.py  keyboards.py  middlewares.py  moderation_room.py  router.py  start.py
app/repositories/: abstract.py
app/repositories/alchemy/: base.py  joke.py  joke_suggestion.py
app/services/: joke_moderations.py
app/services/jokes/: abstract.py  exceptions.py  spacy.py
utils/: singleton.py
