[tool.poetry]
name = "joke-bot"
version = "0.1.0"
description = ""
authors = ["MaHryCT3 <mahryct123@gmail.com>"]
readme = "README.md"
packages = [{include = "joke_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.2.0"
spacy = "^3.7.2"
spacy-fastlang = "^2.0.0"
scikit-learn = "^1.3.2"
sqlalchemy = "^2.0.23"
pydantic-settings = "^2.1.0"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = 'black'
line_length = 120
lines_after_imports = 2
force_alphabetical_sort_within_sections = true

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.flake8]
max-line-length = 120
